# scx_cognis

./: .gitignore  Cargo.toml  DESKTOP_RESPONSIVENESS_NOTES.md  LICENSE  README.md  RT_WATCHDOG_FOLLOWUP.md  V2_RT_WATCHDOG_FOLLOWUP.md  V3_BASE_SELECTION.md  V3_DESIGN.md  V3_DESKTOP_RESPONSIVENESS_NOTES.md  V3_IMPLEMENTATION_PLAN.md  V3_PHASE1_HOTPATH_MAP.md  benchmarks_results.md  build.rs  cognis_benchmark.sh  install.sh  install_benchmark_deps.sh  main.bpf.c  mini_benchmarker.sh  mini_benchmarker_plot.py  uninstall.sh
.cargo/: config.toml
.github/workflows/: ci-arch.yml  ci-cachyos.yml  ci.yml  release.yml
benchmark-results/examples/ryzen-7-6800h-cachyos-kde-desktop/: README.md  mini_benchmarker_summary.csv
src/: bpf.rs  main.rs  stats.rs  task_queue.rs
src/ai/: anomaly.rs  burst_predictor.rs  classifier.rs  cpu_selector.rs  load_balancer.rs  mod.rs  policy.rs  reputation.rs  slice_autopilot.rs  trust.rs
src/tui/: dashboard.rs  mod.rs
