[package]
name = "scx_cognis"
version = "1.1.1"
authors = ["scx_cognis contributors"]
edition = "2021"
description = "An attempt to make an intelligent CPU scheduler — AI-driven, sched_ext-based, user-space Linux CPU scheduler"
license = "GPL-2.0-only"
repository = "https://github.com/galpt/scx_cognis"

[dependencies]
anyhow      = "1.0"
clap        = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
ctrlc       = { version = "3.1", features = ["termination"] }
libbpf-rs   = "=0.26.0-beta.1"
libc        = "0.2"
log         = "0.4"
plain       = "0.2"
procfs      = "0.18"
serde       = { version = "1.0", features = ["derive"] }
simplelog   = "0.12"

# scx ecosystem (published to crates.io)
scx_stats         = "1.0.22"
scx_stats_derive  = "1.0.21"
scx_utils         = "1.0.26"
scx_rustland_core = "2.4.10"

# TUI
crossterm = "0.27"
ratatui   = "0.26"

[build-dependencies]
scx_cargo         = "1.0.27"
scx_rustland_core = "2.4.10"

[features]
enable_backtrace = []

# ── Vendor patches ────────────────────────────────────────────────────────────
#
# scx_rustland_core embeds assets/bpf/main.bpf.c and writes it to the project
# root on every cargo build, which would overwrite our custom BPF fixes.
# The vendor fork keeps the same public API but ships our patched main.bpf.c:
#   1. ops.dispatch: per-CPU DSQ consumed before usersched (fixes kworker stall)
#   2. dispatch_task: RL_CPU_ANY path increments nr_user_dispatches (fixes d→u:0)
[patch.crates-io]
scx_rustland_core = { path = "vendor/scx_rustland_core" }
